koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
/* ... */
ol {
    &.bibliodetails {
        float: left;
        margin: 0 0 1em 1em;
    }
}

.cart-controls {
    border-top: 1px solid #E8E8E8;
    padding: 7px 0;
}

#editions {
    table,
    td {
        border: 0;
    }
}

.overdue,
.debit {
    color: $warning-text-color;
    font-weight: bold;
}

.strong {
    font-weight: bold;
}

.problem {
    color: #990000;
    font-weight: bold;
}

fieldset {
    + fieldset {
        &.action {
            margin-top: -1em;
        }
    }

    &.lastchecked {
        margin-bottom: 0;
        margin-right: 0;
    }

    &.standard {
        background-color: #F4F8F9 !important;
    }

    &.contrast {
        background-color: #F3F3F3 !important;
    }

    &.action {
        background-color: transparent;
        border: 0;
        box-shadow: none;
        clear: both;
        float: none;
        padding: 1rem 1rem 1rem 0;
        width: auto;

        a {
            &.cancel {
                padding-left: 1em;
            }
        }
    }

    &.barcode_input {
        label {
            &.hint {
                display: block;
                margin-bottom: .5em;
            }
        }

        select {
            font-size: 120%;
            max-width: 50%;
            padding: .5em 0;
        }
    }

    &.brief {
        div {
            &.hint {
                margin-bottom: .4em;
            }
        }

        label,
        span.label {
            display: block;
            font-weight: bold;
            text-align: left;

            &.inline {
                display: inline;
                float: none;
                margin-left: 1em;
                width: auto;
            }

            input,
            select,
            .select2-container {
                display: block;
                margin-top: .5em;
            }
        }

        li {
            margin-top: .5em;

            &:first-child {
                margin-top: 0;
            }

            &[aria-disabled="true"] {
                color: #999;
            }

            &.inline {
                display: inline;
                float: none;
                margin-left: 1em;
                width: auto;
            }

            &.radio,
            &.checkbox {
                label {
                    display: inline;
                }
            }
        }

        ol,
        li {
            list-style-type: none;
            padding-left: 0;
        }

        .action {
            margin: 0;
            padding: 1em 0 0 0;
        }
    }

    ol {
        li {
            list-style-type: none;
            padding: .3em 0;
        }
    }

    div {
        &.help-block {
            color: #737373;
            display: block;
            margin-bottom: 10px;
            margin-top: 5px;

            li {
                list-style-position: inside;
                list-style-type: unset;
            }
        }
    }
}

legend {
    &.collapsed,
    &.expanded {
        border: 1px solid #FFF;
        margin-left: -.7em;
        margin-top: -.7em;
        padding: .7em;

        &:hover {
            border: 1px solid #6FAF44;
            cursor: pointer;
        }

        i {
            color: #4C7AA8;
            font-size: 80%;
            padding-right: .2rem;
        }
    }

    &.collapsed {
        margin-bottom: -.5em;

        i.fa.fa-caret-down::before {
            content: "\f0da";
        }
    }
}

details {
    > summary {
        cursor: pointer;

        &.checkouts-by-itemtype {
            li {
                display: inline-block;
            }
        }
    }
}

#floating-save {
    background-color: rgba( 185, 216, 217, .6 );
    bottom: 3%;
    position: fixed;
    right: 1%;
    width: 150px;
}

#sales {
    display: none;
}

.single-line {
    white-space: nowrap;
}

.ex {
    font-family: $font-monospace;
    font-weight: bold;
}

dt {
    font-weight: bold;
}

dd {
    font-size: 90%;
    font-weight: normal;
    padding: .2em .2em .2em 2.5em;
}

#disabled {
    a {
        color: #999;

        &:hover {
            color: #999;
        }
    }
}

#disabled2 {
    a {
        color: #999;
    }
}

.patroninfo {
    background-color: #E6E6E6;
    color: #000;
    left: -10px;
    margin-right: .5rem;
    padding-bottom: 1rem;
    padding-top: 1rem;
    width: 100%;

    h5 {
        color: #000;
        font-weight: bold;
        margin-bottom: 0;
        padding: .5em .9em;
        text-align: left;

        &:empty {
            border-right: 0;
        }

        li {
            &.patrondateofbirth {
                font-size: 75%;
                font-weight: normal;
                list-style-type: none;
                text-align: center;
            }
        }
    }

    ul {
        border: 0;
        margin: 0;
        padding: 0;

        li {
            list-style-type: none;
            margin: 0;
        }
    }

    > div {
        width: 100%;
    }
}

.patroninfo-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: left;
    margin-left: 1rem;
}

.patroninfo-section {
    @include card;
}

.patroninfo-heading {
    clear: both;
    margin-bottom: .3em;
    padding: .5em;

    h3 {
        display: inline-block;
    }

    .btn {
        float: right;
    }
}

/* Patron image */

.patronimage-container {
    padding: .2em;
    position: relative;

    &:hover {
        .patronimage {
            opacity: .8;
        }

        .patronimage-controls {
            opacity: 1;
        }
    }
}

.patronimage {
    border: 1px solid #EEE;
    display: block;
    margin: auto;
    max-width: 160px;
    opacity: 1;
    transition: .2s ease;

    &.empty {
        background: transparent url( "../img/patron-blank.min.svg" ) center 5px no-repeat;
        height: 125px;
        padding: 0;
        min-width: 85px;
        width: 80%;
    }
}
/* ... */

